crates/cli/tests/integration/snapshots/integration__snapshot_tests__markdown_duplicate_exports_only.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: output
---
## Fallow: 1 issue found

### Duplicate exports (1)

- `Config` in `src/config.ts`, `src/types.ts`
