crates/cli/tests/integration/snapshots/integration__snapshot_tests__markdown_duplication_output.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: output
---
## Fallow: 1 clone group found (0.2% duplication)

### Duplicates

**Clone group 1** (11 lines, 2 instances)

- `src/utils.ts:10-20`
- `src/helpers.ts:5-15`

**Summary:** 11 duplicated lines (0.2%) across 2 files
