crates/cli/tests/integration/snapshots/integration__snapshot_tests__markdown_empty.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: output
---
## Fallow: no issues found
