crates/cli/tests/integration/snapshots/integration__snapshot_tests__markdown_health_empty.snap
---
source: crates/cli/tests/integration/snapshot_tests.rs
expression: output
---
## Fallow: no functions exceed complexity thresholds

**200** functions analyzed (max cyclomatic: 20, max cognitive: 15, max CRAP: 30.0)
